Get UserIdentityInfo postlogin
